TEMP: Remove stat fragment as there are bugs in Room queries

--- a/app/src/main/res/layout/fragment_stat.xml
+++ b/app/src/main/res/layout/fragment_stat.xml
@@ -33,8 +33,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
-            android:text="Daily usage past week"
             android:minHeight="40dp"
+            android:text="Daily usage past week"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -253,8 +253,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
             app:cardElevation="4dp"
-            app:layout_constraintStart_toEndOf="@id/card_average_reps_week"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/card_average_reps_week"
             app:layout_constraintTop_toBottomOf="@+id/materialDivider">
 
             <LinearLayout
@@ -275,30 +275,49 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    style="@style/TextAppearance.AppCompat.Headline"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="start"
+                    android:orientation="horizontal">
 
-                    android:text="70"
-                    android:textFontWeight="700"
-                    android:textSize="40sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    <TextView
+                        android:id="@+id/tv_avg_week_time"
+                        style="@style/TextAppearance.AppCompat.Headline"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+
+                        android:text="70"
+                        android:textFontWeight="700"
+                        android:textSize="40sp"
+                        android:layout_marginEnd="4dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        style="@style/TextAppearance.AppCompat.Caption"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+                        android:text="minutes"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </LinearLayout>
 
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/anim_visit"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
+                    android:layout_gravity="center"
                     android:scaleType="centerInside"
                     app:lottie_autoPlay="true"
                     app:lottie_loop="true"
-                    app:lottie_rawRes="@raw/work_focus"
-                    android:layout_gravity="center"
-                    />
+                    app:lottie_rawRes="@raw/work_focus" />
 
 
             </LinearLayout>
@@ -334,27 +353,45 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    style="@style/TextAppearance.AppCompat.Headline"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:text="14"
+                    android:orientation="horizontal">
 
-                    android:textFontWeight="700"
-                    android:textSize="40sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    <TextView
+                        android:id="@+id/tv_avg_week_rep"
+                        style="@style/TextAppearance.AppCompat.Headline"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+                        android:text="14"
+                        android:textFontWeight="700"
+                        android:textSize="40sp"
+                        android:layout_marginEnd="4dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        style="@style/TextAppearance.AppCompat.Caption"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+                        android:text="times"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </LinearLayout>
 
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/anim_reps"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
+                    android:layout_gravity="center"
                     android:scaleType="centerInside"
                     app:lottie_autoPlay="true"
-                    android:layout_gravity="center"
                     app:lottie_loop="true"
                     app:lottie_rawRes="@raw/tomato_reps" />
 
@@ -374,13 +411,13 @@
             app:layout_constraintTop_toBottomOf="@+id/card_average_reps_week" />
 
         <TextView
-            android:id="@+id/tv_reps_day"
+            android:id="@+id/tv_reps_total_today"
             style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="17"
-            app:layout_constraintEnd_toStartOf="@+id/tv_reps_week"
+            app:layout_constraintEnd_toStartOf="@+id/tv_reps_total_week"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
@@ -389,29 +426,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Today"
-            app:layout_constraintEnd_toEndOf="@+id/tv_reps_day"
-            app:layout_constraintStart_toStartOf="@+id/tv_reps_day"
-            app:layout_constraintTop_toBottomOf="@+id/tv_reps_day" />
+            app:layout_constraintEnd_toEndOf="@+id/tv_reps_total_today"
+            app:layout_constraintStart_toStartOf="@+id/tv_reps_total_today"
+            app:layout_constraintTop_toBottomOf="@+id/tv_reps_total_today" />
 
         <TextView
-            android:id="@+id/tv_reps_week"
+            android:id="@+id/tv_reps_total_week"
             style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="50m"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_reps_day"
-            app:layout_constraintEnd_toStartOf="@+id/tv_reps_month"
-            app:layout_constraintStart_toEndOf="@+id/tv_reps_day"
-            app:layout_constraintTop_toTopOf="@+id/tv_reps_day" />
+            android:text="50"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_reps_total_today"
+            app:layout_constraintEnd_toStartOf="@+id/tv_reps_total_month"
+            app:layout_constraintStart_toEndOf="@+id/tv_reps_total_today"
+            app:layout_constraintTop_toTopOf="@+id/tv_reps_total_today" />
 
         <TextView
             android:id="@+id/textView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Week"
-            app:layout_constraintEnd_toEndOf="@+id/tv_reps_week"
-            app:layout_constraintStart_toStartOf="@+id/tv_reps_week"
-            app:layout_constraintTop_toBottomOf="@+id/tv_reps_week" />
+            app:layout_constraintEnd_toEndOf="@+id/tv_reps_total_week"
+            app:layout_constraintStart_toStartOf="@+id/tv_reps_total_week"
+            app:layout_constraintTop_toBottomOf="@+id/tv_reps_total_week" />
 
 
         <TextView
@@ -419,20 +456,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Month"
-            app:layout_constraintEnd_toEndOf="@+id/tv_reps_month"
-            app:layout_constraintStart_toStartOf="@+id/tv_reps_month"
-            app:layout_constraintTop_toBottomOf="@+id/tv_reps_month" />
+            app:layout_constraintEnd_toEndOf="@+id/tv_reps_total_month"
+            app:layout_constraintStart_toStartOf="@+id/tv_reps_total_month"
+            app:layout_constraintTop_toBottomOf="@+id/tv_reps_total_month" />
 
         <TextView
-            android:id="@+id/tv_reps_month"
+            android:id="@+id/tv_reps_total_month"
             style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="50m"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_reps_week"
+            android:text="50"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_reps_total_week"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tv_reps_week"
-            app:layout_constraintTop_toTopOf="@+id/tv_reps_week" />
+            app:layout_constraintStart_toEndOf="@+id/tv_reps_total_week"
+            app:layout_constraintTop_toTopOf="@+id/tv_reps_total_week" />
 
         <TextView
             android:id="@+id/textView9"
@@ -446,47 +483,47 @@
             app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
         <TextView
-            android:id="@+id/tv_time_day"
+            android:id="@+id/tv_time_totay_today"
             style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="50m"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_time_week"
-            app:layout_constraintEnd_toStartOf="@+id/tv_time_week"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_time_total_week"
+            app:layout_constraintEnd_toStartOf="@+id/tv_time_total_week"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_time_week" />
+            app:layout_constraintTop_toTopOf="@+id/tv_time_total_week" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Today"
-            app:layout_constraintEnd_toEndOf="@+id/tv_time_day"
-            app:layout_constraintStart_toStartOf="@+id/tv_time_day"
-            app:layout_constraintTop_toBottomOf="@+id/tv_time_day" />
+            app:layout_constraintEnd_toEndOf="@+id/tv_time_totay_today"
+            app:layout_constraintStart_toStartOf="@+id/tv_time_totay_today"
+            app:layout_constraintTop_toBottomOf="@+id/tv_time_totay_today" />
 
         <TextView
-            android:id="@+id/tv_time_week"
+            android:id="@+id/tv_time_total_week"
             style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="150m"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_time_month"
-            app:layout_constraintEnd_toStartOf="@+id/tv_time_month"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_time_total_month"
+            app:layout_constraintEnd_toStartOf="@+id/tv_time_total_month"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/tv_time_day"
-            app:layout_constraintTop_toTopOf="@+id/tv_time_month" />
+            app:layout_constraintStart_toEndOf="@+id/tv_time_totay_today"
+            app:layout_constraintTop_toTopOf="@+id/tv_time_total_month" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Month"
-            app:layout_constraintEnd_toEndOf="@+id/tv_time_month"
-            app:layout_constraintStart_toStartOf="@+id/tv_time_month"
-            app:layout_constraintTop_toBottomOf="@+id/tv_time_month" />
+            app:layout_constraintEnd_toEndOf="@+id/tv_time_total_month"
+            app:layout_constraintStart_toStartOf="@+id/tv_time_total_month"
+            app:layout_constraintTop_toBottomOf="@+id/tv_time_total_month" />
 
         <TextView
-            android:id="@+id/tv_time_month"
+            android:id="@+id/tv_time_total_month"
             style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -494,16 +531,16 @@
             android:text="350m"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/tv_time_week"
+            app:layout_constraintStart_toEndOf="@+id/tv_time_total_week"
             app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Week"
-            app:layout_constraintEnd_toEndOf="@+id/tv_time_week"
-            app:layout_constraintStart_toStartOf="@+id/tv_time_week"
-            app:layout_constraintTop_toBottomOf="@+id/tv_time_week" />
+            app:layout_constraintEnd_toEndOf="@+id/tv_time_total_week"
+            app:layout_constraintStart_toStartOf="@+id/tv_time_total_week"
+            app:layout_constraintTop_toBottomOf="@+id/tv_time_total_week" />
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/group"
