--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -88,11 +88,11 @@
             />
         <Button
             android:id="@+id/notification_sound_change_btn"
+            style="@style/Widget.Material3.Button.IconButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="HIHI"
-            android:drawableStart="@drawable/ic_noti"
-            android:layout_weight="1"
+            app:icon="@drawable/ic_change"
+            android:layout_gravity="top"
             />
 
     </LinearLayout>
