--- a/app/src/main/res/layout/item_user_task.xml
+++ b/app/src/main/res/layout/item_user_task.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
@@ -43,8 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
-            android:text="Finish all the coding. Start deploying
-        asdjkflasjdklfjksljdflkjklj klj jklasjdflk jlaksdjreal app to play asdjfkljsdlkfj jklasdjfjkdl j kasldfjaklsdjf klstore"
+            android:text="Finish all the coding"
             android:textColor="@color/material_on_surface_emphasis_medium"
             android:textSize="16sp"
             android:visibility="gone"
